--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,6 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "3D-Educational-Labaratory.slnx"
+    "dotnet.defaultSolution": "3D-Educational-Labaratory.slnx",
+    "dotnet.preferCSharpExtension": true
 }
